# docs/swagger.json
@@ -16,7 +16,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "AddCryptocurrency"
+                    "Cryptocurrency"
                 ],
                 "summary": "Add cryptocurrency",
                 "operationId": "AddCryptocurrency",
@@ -56,7 +56,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "GetPriceCryptocurrency"
+                    "Cryptocurrency"
                 ],
                 "summary": "Get price",
                 "operationId": "GetPriceCryptocurrency",
@@ -96,7 +96,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "RemoveCryptocurrency"
+                    "Cryptocurrency"
                 ],
                 "summary": "Remove cryptocurrency",
                 "operationId": "RemoveCryptocurrency",
